# ie_pandas

./: README.md  README.txt  license.txt  setup.cfg  test_access_col_name.py  test_col_id.py  test_index.py
src/ie_pandas/: DataFrame.py
tests/: test_DF_from_dict_of_lists.py  test_access_col_name.py  test_access_underlying_array.py  test_col_names.py  test_df_creation.py  test_edit_df.py  test_index.py  test_max.py  test_mean.py  test_median.py  test_min.py  test_row_names.py  test_sum.py
