[metadata]
name = ie_pandas
author = group_c
version = 0.0.1
summary = A simple implementation of dataframe functionality
description-file = 
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = license.txt

[options]
install_requires =
    numpy >= 1.16
    matplotlib >= 3.0.2
package_dir=
    =src
packages=find:

[options.extras_require]
dev=
    black
    pytest >= 4.2
    pytest-cov >= 2.6
	
[options.packages.find]
where=src

